[package]
name = "antelope-firewall"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.0.0-rc.3", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2" 
reqwest = { version = "0.11.18", features = ["json"] }
lazy_static = "1.4.0"
toml = "0.7.4"
rand = "0.8.5"

